--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ header {
 }
 
 /* Common */
+.main {
+    font-family: Poppins;
+}
+
 .container {
     width: 1140px;
     max-width: calc(100% - 48px);
@@ -249,4 +253,111 @@ header {
     align-items: center;
     justify-content: center;
     gap: 10px;
+}
+
+/* Services */
+.services__top-content {
+    color: #152427;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.62;
+}
+
+.services__heading {
+    margin-top: 12px;
+    width: 520px;
+    color: #152427;
+    font-size: 4.2rem;
+    font-weight: 600;
+    line-height: 1.23;
+}
+
+.services__heading::after {
+    content: "";
+    display: inline-block;
+    width: 66px;
+    height: 2px;
+    background: #152427;
+    position: relative;
+    top: -10px;
+    left: 10px;
+}
+
+.services__top-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-right: 76px;
+}
+
+.services-move__link {
+    margin-left: 17px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 54px;
+    height: 54px;
+    background: #e2eddf;
+    border-radius: 50%;
+    color: #152427;
+    transition: 0.25s;
+}
+
+.services-move__link:hover {
+    background: #143c3c;
+    color: #fff;
+}
+
+.services-move__btn--right {
+    transform: rotate(180deg);
+}
+
+.services__content {
+    margin-top: 76px;
+}
+
+.services__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
+}
+
+.services__item {
+    border-radius: 20px;
+    transition: 0.25s;
+}
+
+.services__item:hover {
+    box-shadow: -6px 9px 64px -4px rgba(118, 118, 118, 0.25);
+    transform: translateY(-10px);
+}
+
+.services__img {
+    width: 100%;
+    height: 318px;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+
+.services__item-info {
+    padding: 24px 102px 18px 18px;
+    padding-top: 24px;
+    padding-right: 102px;
+    background: #fff;
+    border-radius: 0 0 20px 20px;
+}
+
+.services__item-heading {
+    color: #152427;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.services__item-desc {
+    display: inline-block;
+    margin: 18px 0;
+    color: #7d8188;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.71;
 }
