--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -755,3 +755,133 @@ header {
     font-weight: 500;
     line-height: 1.71;
 }
+
+/* Blog */
+.blog {
+    margin-top: 184px;
+}
+
+.blog-intro {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.blog-top__heading {
+    margin-top: 10px;
+    width: 520px;
+    color: #152427;
+    font-family: Poppins;
+    font-size: 4.2rem;
+    font-weight: 600;
+    line-height: 1.24;
+    position: relative;
+}
+
+.blog-top__heading::after {
+    content: "";
+    display: inline-block;
+    width: 82px;
+    height: 3px;
+    background: #152427;
+    position: absolute;
+    bottom: 20px;
+    right: -50px;
+}
+
+.blog-top__desc {
+    width: 409px;
+    color: #7d8188;
+    font-family: Poppins;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.63;
+}
+
+/* Blog list */
+.blog-list {
+    margin-top: 90px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+}
+
+.blog-item {
+    border-radius: 0 0 40px 40px;
+    transition: 0.25s;
+}
+
+.blog-item:hover {
+    box-shadow: 0px 12px 74px 0px rgba(91, 91, 91, 0.25);
+}
+
+.blog-item:hover .blog-item__label {
+    background: #143c3c;
+    color: #e2eddf;
+}
+
+.blog-item__img {
+    width: 100%;
+    max-height: 243px;
+    object-fit: cover;
+    border-radius: 40px 40px 0 0;
+}
+
+.blog-content {
+    padding: 26px 33px 12px 20px;
+}
+
+.blog-item__label {
+    width: 107px;
+    height: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    color: #000;
+    background: #e2eddf;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.2;
+    transition: 0.25s;
+}
+
+.blog-item__heading {
+    width: 96%;
+    margin-top: 13px;
+    margin-bottom: 55px;
+    color: #143c3c;
+    font-family: Poppins;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+}
+
+.blog-item__date {
+    display: flex;
+    justify-content: flex-end;
+    color: #575d5e;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.2;
+    position: relative;
+}
+
+.blog-item__date::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 297px;
+    height: 1px;
+    background: #c4c4c4;
+    top: -16px;
+}
+
+/* Footer */
+.footer {
+    margin-top: 102px;
+    background: #143c3c;
+    height: 500px;
+}
