Làm phần footer và coppyright

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ a {
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -86,14 +87,14 @@ header {
 /* Header */
 .header {
     padding-top: 28px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     background: #fff;
 }
 
 .header--fixed {
-    /* position: sticky;
-    top: -8px;
-    z-index: 99; */
+    position: sticky;
+    top: -20px;
+    z-index: 99;
 }
 .header-top {
     display: flex;
@@ -201,6 +202,11 @@ header {
     display: flex;
     align-items: center;
     gap: 36px;
+}
+
+.hero-play__btn {
+    border-bottom: 10px;
+    transition: 0.25s;
 }
 
 .hero-play__btn:hover {
@@ -565,10 +571,10 @@ header {
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 1;
+    text-decoration: underline;
 }
 
 .process-info__link:hover {
-    text-decoration: underline;
     opacity: 0.8;
 }
 
@@ -807,8 +813,9 @@ header {
 }
 
 .blog-item {
-    border-radius: 0 0 40px 40px;
+    border-radius: 40px;
     transition: 0.25s;
+    background: #fff;
 }
 
 .blog-item:hover {
@@ -883,5 +890,138 @@ header {
 .footer {
     margin-top: 102px;
     background: #143c3c;
-    height: 500px;
+    padding: 72px 0 30px 0;
+}
+
+.footer__heading {
+    color: #fff;
+    font-family: Poppins;
+    font-size: 3.2rem;
+    font-weight: 500;
+}
+
+.footer-form {
+    margin-top: 25px;
+    padding-bottom: 36px;
+    display: inline-block;
+    border-bottom: 1px solid #6a8383;
+}
+
+.footer__input {
+    min-width: 200px;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 2.2rem;
+}
+
+.footer__input::placeholder {
+    color: #6a8383;
+    font-family: Poppins;
+    font-size: 2.2rem;
+    font-weight: 600;
+}
+
+.footer__act {
+    display: inline-block;
+    padding-left: 40px;
+    padding-right: 13px;
+    transition: 0.25s;
+}
+
+.footer__act:hover {
+    opacity: 0.8;
+}
+
+.footer-social {
+    display: flex;
+    margin-top: 47px;
+    gap: 22px;
+}
+
+.footer-social__link {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 52px;
+    height: 52px;
+    border: 1px solid #265252;
+    border-radius: 50%;
+    background: transparent;
+    font-size: 20px;
+    color: #fff;
+    transition: 0.25s;
+}
+
+.footer-social__link:hover {
+    background: #a75325;
+    opacity: 0.8;
+    border: transparent;
+}
+
+.footer-wrap {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 45px;
+    position: relative;
+}
+
+.footer-wrap::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(
+        90deg,
+        #143c3c 2.28%,
+        #295a5a 55.65%,
+        rgba(38, 82, 82, 0) 102.06%
+    );
+    bottom: 0;
+}
+
+.footer-list {
+    margin-left: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 55px;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-item__heading {
+    color: #fff;
+    font-family: "Public Sans";
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 1.55;
+}
+
+.footer-item__link {
+    color: #6a8383;
+    font-family: "Public Sans";
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 2.25;
+}
+
+.footer-item__link:hover {
+    text-decoration: underline;
+}
+
+.coppyright {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.coppyright__desc {
+    color: #6a8383;
+    font-family: "Public Sans";
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 2.25;
 }
